--- a/src/scss/components/_pokemon_card_grid.scss
+++ b/src/scss/components/_pokemon_card_grid.scss
@@ -18,14 +18,64 @@
       padding: 1rem;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       position: relative;
-      &-title{
+      svg{
+        transition: 0.3s ease-in-out;
+        &:hover{
+          font-size: 2rem;
+        }
+      }
+      &-list {
+        position: absolute;
+        top: 0.7rem;
+        left: 0.8rem;
+        font-size: 1rem;
+        cursor: pointer;
+        .trash {
+          color: #e21b5a;
+        }
+        .plus {
+          color: #27af0f;
+        }
+      }
+      &-compare{
+        position: absolute;
+        top: 0.7rem;
+        right: 0.8rem;
+        font-size: 1.3rem;
+        svg{
+          color: #1f51ff;
+        }
+      }
+      &-title {
         text-align: center;
         cursor: pointer;
+        margin-top: 1rem;
       }
       &-image {
         height: 10rem;
         cursor: pointer;
         margin-top: 0.5rem;
+      }
+      &-types {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+        gap: 1rem;
+        &-type {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin-top: 0.5rem;
+          gap: 0.4rem;
+
+          &-image {
+            height: 2rem;
+          }
+          &-text {
+            font-size: smaller;
+          }
+        }
       }
     }
   }
