--- a/src/scss/components/_pokemon_card_grid.scss
+++ b/src/scss/components/_pokemon_card_grid.scss
@@ -42,6 +42,7 @@
         top: 0.7rem;
         right: 0.8rem;
         font-size: 1.3rem;
+        cursor: pointer;
         svg{
           color: #1f51ff;
         }
